# soft-app-store

./: README.md  meson.build
data/: meson.build  soft-app-store.desktop.in
data/hicolor/: meson.build
data/icon/: meson.build
data/soft-app-store/: appstore-server.ini  meson.build
po/: POTFILES.in  soft-app-store.pot  zh_CN.po
src/: app-store-category.c  app-store-category.h  app-store-details.c  app-store-details.h  app-store-local.c  app-store-local.h  app-store-message.c  app-store-message.h  app-store-pkgkit.c  app-store-pkgkit.h  app-store-row.c  app-store-row.h  app-store-screenshot.c  app-store-screenshot.h  app-store-search.c  app-store-search.h  app-store-store.c  app-store-store.h  app-store-thumbnail.c  app-store-thumbnail.h  app-store-update.c  app-store-update.h  app-store-util.c  app-store-util.h  app-store.h  main.c  meson.build  tags
